<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_exercise"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/add_workout_heading"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />


    <LinearLayout
        android:id="@+id/recyler_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addDetails"
        android:orientation="horizontal"
        android:paddingTop="@dimen/fab_margin">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/today_workout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:orientation="vertical"
        android:paddingTop="@dimen/fab_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/fab_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/workout_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/workout_type"></Spinner>

                <Button
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Select Date"></Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/fab_margin">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">


                    <EditText
                        android:id="@+id/workout_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#009fff"
                        android:hint="@string/workout_time"
                        android:inputType="number"
                        android:nextFocusForward="@+id/workout_distance"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

                <!--                <TextView
                                    android:id="@+id/time_unit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="minutes"
                                    android:textColor="#009fff"
                                    android:textSize="20sp" />-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/workout_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#009fff"
                        android:hint="@string/workout_distance"
                        android:inputType="numberDecimal"
                        android:nextFocusForward="@+id/calories"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#009fff"
                        android:hint="@string/calories"
                        android:inputType="numberDecimal"
                        android:nextFocusForward="@+id/workout_pace"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

                <!--                <TextView
                                    android:id="@+id/calories_unit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="cal"
                                    android:textColor="#009fff"
                                    android:textSize="20sp" />-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pace_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/workout_pace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#009fff"
                        android:hint="@string/pace"
                        android:imeActionLabel="Done"
                        android:imeOptions="actionDone"
                        android:inputType="time"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/incline_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/workout_inclination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#009fff"
                        android:hint="@string/incline"
                        android:imeActionLabel="Done"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/navBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingTop="8dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff" />

            <Button
                android:id="@+id/add_workout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_workout" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
